<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/arts"
        android:layout_height="@dimen/cat_dimen"
        android:layout_width="@dimen/cat_dimen"
        android:layout_marginTop="50dp"
        android:layout_alignRight="@+id/arts_txt"
        android:layout_alignEnd="@+id/arts_txt" />
    <TextView
        android:id="@+id/arts_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arts"
        android:layout_below="@+id/arts"
        android:layout_marginLeft="39dp"
        />

    <ImageButton
        android:id="@+id/arch"
        android:layout_height="@dimen/cat_dimen"
        android:layout_width="@dimen/cat_dimen"
        android:layout_gravity="center_horizontal"
        android:layout_alignTop="@+id/arts"
        android:layout_toRightOf="@+id/arts"
        android:layout_toEndOf="@+id/arts" />

    <TextView
        android:id="@+id/arch_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arch"

        android:layout_below="@+id/arch"
        android:layout_centerHorizontal="true" />
    <ImageButton
        android:id="@+id/bio"
        android:layout_height="@dimen/cat_dimen"
        android:layout_width="@dimen/cat_dimen"
        android:layout_alignTop="@+id/arch"
        android:layout_toRightOf="@+id/arch"
        android:layout_toEndOf="@+id/arch" />
    <TextView
        android:id="@+id/bio_txt"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:layout_below="@+id/bio"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <ImageButton
        android:layout_width="@dimen/cat_dimen"
        android:layout_height="@dimen/cat_dimen"
        android:id="@+id/entertainment"
        android:layout_below="@+id/arts_txt"
        android:layout_toLeftOf="@+id/finance"
        android:layout_toStartOf="@+id/finance" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Entertainment"
        android:id="@+id/entertainment_txt"
        android:layout_below="@+id/entertainment"
        android:layout_alignLeft="@+id/arts_txt"
        android:layout_alignStart="@+id/arts_txt" />

    <ImageButton
        android:layout_width="@dimen/cat_dimen"
        android:layout_height="@dimen/cat_dimen"
        android:id="@+id/finance"
        android:layout_alignTop="@+id/entertainment"
        android:layout_toRightOf="@+id/arts_txt"
        android:layout_toEndOf="@+id/arts_txt" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Finance"
        android:id="@+id/textView6"
        android:layout_below="@+id/finance"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/humanities"
        android:layout_height="@dimen/cat_dimen"
        android:layout_width="@dimen/cat_dimen"
        android:layout_below="@+id/bio_txt"
        android:layout_toRightOf="@+id/sciences"
        android:layout_toEndOf="@+id/sciences" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humanities"
        android:id="@+id/textView4"
        android:layout_below="@+id/humanities"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignEnd="@+id/textView7" />

    <ImageButton
        android:id="@+id/robotics"
        android:layout_height="@dimen/cat_dimen"
        android:layout_width="@dimen/cat_dimen"
        android:layout_below="@+id/entertainment_txt"
        android:layout_alignLeft="@+id/entertainment"
        android:layout_alignStart="@+id/entertainment" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/robotics"
        android:id="@+id/textView3"
        android:layout_below="@+id/robotics"
        android:layout_alignLeft="@+id/entertainment_txt"
        android:layout_alignStart="@+id/entertainment_txt" />


    <ImageButton
        android:id="@+id/sciences"
        android:layout_height="@dimen/cat_dimen"
        android:layout_width="@dimen/cat_dimen"
        android:layout_alignTop="@+id/robotics"
        android:layout_toRightOf="@+id/robotics"
        android:layout_toEndOf="@+id/robotics" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sciences"
        android:id="@+id/textView5"
        android:layout_below="@+id/sciences"
        android:layout_centerHorizontal="true" />


    <ImageButton
        android:layout_width="@dimen/cat_dimen"
        android:layout_height="@dimen/cat_dimen"
        android:id="@+id/Tech"
        android:layout_alignBottom="@+id/sciences"
        android:layout_toRightOf="@+id/sciences"
        android:layout_toEndOf="@+id/sciences" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tech"
        android:id="@+id/textView7"
        android:layout_below="@+id/Tech"
        android:layout_alignRight="@+id/Tech"
        android:layout_alignEnd="@+id/Tech" />

</RelativeLayout>